# bookapp

./: .gitignore  AGENTS.md  app.py  justfile  main.py  piccolo_conf.py  pyproject.toml
.postman/: config.json
api/: health.py
api/v1/: router.py  users.py
app/: main.py  settings.py
apps/auth/: dependencies.py  models.py  piccolo_app.py  router.py  schema.py  service.py
apps/auth/piccolo_migrations/: auth_2026_03_23t11_53_43_294782.py
apps/shared/models/: base.py
config/: piccolo_conf.py
core/: exceptions.py  middleware.py  msgspec_response.py  plugins.py  security.py  settings.py
domain/auth/: models.py  router.py  schema.py  service.py
domain/shared/models/: base.py
dtos/: user_dto.py
models/: base.py  users.py
postman/globals/: workspace.postman_globals.json
schemas/: user_schema.py
scripts/: seed.py
services/: user_service.py
