[project]
name = "bookapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.5.0",
    "granian>=2.7.0",
    "litestar>=2.19.0",
    "piccolo[all]>=1.30.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
extend-ignore = [
    "PLR",  # Design related pylint codes
]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
extend-select = [
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
